include(Catch)

function(yac_add_test name source)
  add_executable(${name} ${source})
  target_link_libraries(${name} PRIVATE
    yac_app
    yac_presentation
    yac_service
    Catch2::Catch2WithMain
  )
  catch_discover_tests(${name} TEST_PREFIX "${name}::")
endfunction()

yac_add_test(yac_test_message          test_message.cpp)
yac_add_test(yac_test_tool_call_types  test_tool_call_types.cpp)
yac_add_test(yac_test_tool_executor    test_tool_executor.cpp)
yac_add_test(yac_test_chat_session     test_chat_session.cpp)
yac_add_test(yac_test_composer_state   test_composer_state.cpp)
yac_add_test(yac_test_parser           test_parser.cpp)
yac_add_test(yac_test_highlighter      test_highlighter.cpp)
yac_add_test(yac_test_renderer         test_renderer.cpp)
yac_add_test(yac_test_tool_call_renderer test_tool_call_renderer.cpp)
yac_add_test(yac_test_sub_agent_renderer test_sub_agent_renderer.cpp)
yac_add_test(yac_test_chat_ui          test_chat_ui.cpp)
yac_add_test(yac_test_chat_ui_render_plan test_chat_ui_render_plan.cpp)
yac_add_test(yac_test_chat_ui_dialog   test_chat_ui_dialog.cpp)
yac_add_test(yac_test_collapsible      test_collapsible.cpp)
yac_add_test(yac_test_command_palette  test_command_palette.cpp)
yac_add_test(yac_test_dialog           test_dialog.cpp)
yac_add_test(yac_test_theme_tool_colors test_theme_tool_colors.cpp)
yac_add_test(yac_test_theme            test_theme.cpp)
yac_add_test(yac_test_message_renderer test_message_renderer.cpp)
yac_add_test(yac_test_tool_call_integration test_tool_call_integration.cpp)
yac_add_test(yac_test_time_util        test_time_util.cpp)
yac_add_test(yac_test_scroll_math      test_scroll_math.cpp)
yac_add_test(yac_test_chat_service     test_chat_service.cpp)
yac_add_test(yac_test_chat_event_bridge test_chat_event_bridge.cpp)
yac_add_test(yac_test_model_discovery  test_model_discovery.cpp)
yac_add_test(yac_test_openai_chat_provider test_openai_chat_provider.cpp)
yac_add_test(yac_test_openai_chat_protocol test_openai_chat_protocol.cpp)
yac_add_test(yac_test_model_context_windows test_model_context_windows.cpp)
yac_add_test(yac_test_slash_command_registry test_slash_command_registry.cpp)
yac_add_test(yac_test_slash_command_task    test_slash_command_task.cpp)
yac_add_test(yac_test_prompt_slash_commands test_prompt_slash_commands.cpp)
yac_add_test(yac_test_slash_command_menu test_slash_command_menu.cpp)
yac_add_test(yac_test_settings_toml    test_settings_toml.cpp)
yac_add_test(yac_test_config_paths     test_config_paths.cpp)
yac_add_test(yac_test_prompt_library   test_prompt_library.cpp)
yac_add_test(yac_test_sub_agent_manager test_sub_agent_manager.cpp)
yac_add_test(yac_test_sub_agent_event_adapter test_sub_agent_event_adapter.cpp)
yac_add_test(yac_test_sub_agent_events test_sub_agent_events.cpp)
yac_add_test(yac_test_sub_agent_executor test_sub_agent_executor.cpp)
yac_add_test(yac_test_tool_call_descriptor test_tool_call_descriptor.cpp)
